rebuilding step2 Backpropagation and taking into account deltaW